finish base design, still have to create header and footer, and do optimizations

--- a/public/index.html
+++ b/public/index.html
@@ -3,17 +3,31 @@
 
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+<!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
+<script>
+
+</script>
 
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="" content="" />
-  <title>React App</title>
+  <title>Apexi</title>
 </head>
 
-<body>
+<body data-aos='fade'>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
+  <!-- <script>
+    AOS.init();
+  </script> -->
 </body>
+
+<style>
+  .marquee-container {
+    overflow-x: visible !important;
+  }
+</style>
 
 </html>
